src/codegen/tests/snapshots/rusty__codegen__tests__code_gen_tests__date_invalid_declaration.snap
---
source: src/codegen/tests/code_gen_tests.rs
expression: msg
---
error[E075]: Some initial values were not generated

error[E041]: Cannot generate literal initializer for 'prg.a': Value cannot be derived
  ┌─ <internal>:3:23
  │
1 │ PROGRAM prg
  │         --- see also
2 │         VAR
3 │           a : DATE := D#2001-02-29; (* feb29 on non-leap year should not pass *)
  │                       ^^^^^^^^^^^^ Cannot generate literal initializer for 'prg.a': Value cannot be derived


